--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   
 </body>
-<script src="/src/js/object/defineProperty/index.js"> </script>
+<script src="/src/js/symbol/asyncIterator/index.js"> </script>
 <script>
   // var json = {"a":1,"b":2,"c":"","d":[{"aa":[{"aaa":null,"bbb":222}],"bb":22,"cc":null}]};
   // let str = JSON.stringify(json)
@@ -32,5 +32,7 @@
   // }
   // getNonObject(json)
   // console.log(json)
+
+  // todo: 用正则解法
 </script>
 </html>
