--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   
 </body>
-<script src="/src/js/array/splice/index.js"> </script>
+<script src="/src/js/issue/3.js"> </script>
 <script>
   // var json = {"a":1,"b":2,"c":"","d":[{"aa":[{"aaa":null,"bbb":222}],"bb":22,"cc":null}]};
   // let str = JSON.stringify(json)
