--- a/index.html
+++ b/index.html
@@ -7,32 +7,6 @@
 <body>
   
 </body>
-<script src="/src/js/issue/3.js"> </script>
-<script>
-  // var json = {"a":1,"b":2,"c":"","d":[{"aa":[{"aaa":null,"bbb":222}],"bb":22,"cc":null}]};
-  // let str = JSON.stringify(json)
+<script src="/src/js/array/reduce/index.js"> </script>
 
-  // console.log( str, str.replace(/^\,+[null\,]$/g, ''))
-  // function isObject(ob) {
-  //   return typeof ob === 'object'
-  // }
-  // function getNonObject(ob) {
-  //   if(!isObject(ob) || !ob) return ;
-  //   else {
-  //     for(let i in ob) {
-  //       if(!ob[i]) delete ob[i]
-  //       if(isObject(ob[i])) {
-  //         ob[i] = getNonObject(ob[i])
-  //       }
-  //     }
-
-  //   }
-    
-  //   return ob;
-  // }
-  // getNonObject(json)
-  // console.log(json)
-
-  // todo: 用正则解法
-</script>
 </html>
