--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 </body>
-<script src="/src/js/array/map/index.js"> </script>
+<script src="/src/js/proxy/apply/index.js"> </script>
 </html>
 
