test video autoplay permission

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Re-Learning</title>
 </head>
 <body>
+  <iframe src="./video.html"  allow = "autoplay" width="1000" height="1000"></iframe>
 </body>
 <script src="/src/js/proxy/apply/index.js"> </script>
 </html>
