--- a/video.html
+++ b/video.html
@@ -5,7 +5,7 @@
   <title>Re-Learning</title>
 </head>
 <body>
-  <video width="1000" height="1000" autoplay loop src="http://horizon-mall-test.oss-cn-hzfinance.aliyuncs.com/lottery-mini-test/e2996faeb80a8f19970572a684a549ab.mp4"></video>
+  <video width="1000" height="1000" autoplay muted loop src="http://horizon-mall-test.oss-cn-hzfinance.aliyuncs.com/lottery-mini-test/e2996faeb80a8f19970572a684a549ab.mp4"></video>
 </body>
 
 </html>
