:art: filter and every learn

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button > trigger</button>
   <!-- <iframe src="./video.html"  allow = "autoplay" width="1000" height="1000"></iframe> -->
 </body>
-<script src="/src/js/proxy/get/index.js"> </script>
+<script src="/src/js/array/filter/index.js"> </script>
 <script>
 /**
  * test video js
