你真的了解map吗

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </script>
   <!-- <iframe src="./video.html"  allow = "autoplay" width="1000" height="1000"></iframe> -->
 </body>
-<script src="/src/js/proxy/set/index.js"> </script>
+<script src="/src/js/array/map/index.js"> </script>
 <script>
 /**
  * test video js
