custom call apply & bind

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </script>
   <!-- <iframe src="./video.html"  allow = "autoplay" width="1000" height="1000"></iframe> -->
 </body>
-<script src="/src/js/eventLoop.js"> </script>
+<script src="/src/js/function/custom.js"> </script>
 <script>
 /**
  * test video js
