promise rewrite follow mdn

--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
   <!-- <iframe src="./video.html"  allow = "autoplay" width="1000" height="1000"></iframe> -->
 </body>
 <script src="/src/js/function/custom.js"> </script>
-<script>
-/**
- * test video js
- */
+<script type="module" src="./src/js/module/es/a.js">
+
+setTimeout(() => {
+  console.log(a)
+}, 2000)
 </script>
 </html>
 
