--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     .dn {
       display: none;
     }
+    .vh {
+      visibility: hidden;
+    }
     ul {
       width: 100px;
       height: 200px;
@@ -17,6 +20,8 @@
   </style>
 </head>
 <body>
+  <div class="dn"></div>
+  <div class="vh"></div>
     <video  width="1000" height="500" controls loop src="http://horizon-mall-test.oss-cn-hzfinance.aliyuncs.com/lottery-mini-test/e2996faeb80a8f19970572a684a549ab.mp4"></video>
     <button > trigger</button>
     <ul>
